--- a/src/app/styles/header.css
+++ b/src/app/styles/header.css
@@ -13,7 +13,7 @@
 }
 
 .header-desktop {
-  flex: 0 0 30%;
+  flex: 0 0 25%;
   background: #000000;
   position: relative;
   min-height: 90px !important;
@@ -40,10 +40,10 @@
 }
 
 .top-nav {
-  flex: 0 0 70%;
+  flex: 0 0 75%;
   display: flex;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: center;
   background: #000000;
   padding-right: 5vw;
   transform: none !important;
@@ -52,8 +52,10 @@
 .top-nav .nav-items {
   display: flex;
   align-items: center;
+  justify-content: center;
   gap: 40px !important;
   transform: none;
+  height: 100%;
 }
 
 .top-nav a {
@@ -65,6 +67,9 @@
   white-space: nowrap;
   line-height: 1;
   font-weight: 700;
+  display: flex;
+  align-items: center;
+  height: 100%;
 }
 
 .top-nav a:hover {
@@ -78,6 +83,9 @@
   border-radius: 6px !important;
   font-size: 20px !important;
   font-weight: 700;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 /* Laptop displays */
